--- a/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
@@ -26,6 +26,10 @@
                         <button class="button-18 active" role="button" id="adult-btn">Erwachsene</button>
                         <button class="button-18" role="button" id="kids-btn">Kids</button>
                     </div>
+                    <div class="button-container">
+                        <button class="button-18 popup" role="button" id="male-btn">Herren</button>
+                        <button class="button-18 popup" role="button" id="female-btn">Damen</button>
+                    </div>
 
                     <div class="product-list" data-list="{{ list|json_encode() }}">
                         <div class="result"></div>
