--- a/themes/feuerwehr-hungen/scss/attendance-tracker.scss
+++ b/themes/feuerwehr-hungen/scss/attendance-tracker.scss
@@ -52,11 +52,11 @@
 #teacher-dropdown-container {
   font-weight: bold;
   padding-left: 0;
-  margin-top: -10px;
+  margin-top: 0;
   margin-bottom: 0.6rem;
 
   label {
-    font-size: 1rem;
+    font-size: 1.2rem;
 
   }
 }
