--- a/themes/feuerwehr-hungen/templates/modular/attendance-tracker.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/attendance-tracker.html.twig
@@ -11,6 +11,7 @@
     }
 </script>
 <script type="module" src="{{ url('theme://js/attendance-charts.js') }}"></script>
+<script type="module" src="{{ url('theme://js/modules/multiselect-dropdown.js') }}" ></script>
 
 
 
@@ -231,7 +232,7 @@
 
                 <div id="teacher-dropdown-container">
                         <label for="teacher-dropdown">Ausbilder:</label>
-                        <select id="teacher-dropdown" class="teacher-dropdown">
+                        <select id="teacher-dropdown" class="teacher-dropdown" multiple>
                             <option value="Haaf, Bastian">Bastian Haaf</option>
                             <option value="Tag, Dominik">Dominik Tag</option>
                             <option value="Reitz, Gerald">Gerald Reitz</option>
