Rework naming scheme from teacher to instructor

--- a/themes/feuerwehr-hungen/scss/attendance-tracker.scss
+++ b/themes/feuerwehr-hungen/scss/attendance-tracker.scss
@@ -48,8 +48,8 @@
   }
 }
 
-// Teacher Dropdown
-#teacher-dropdown-container {
+// Instructor Dropdown
+#instructor-dropdown-container {
   font-weight: bold;
   padding-left: 0;
   margin-top: 0;
