--- a/themes/feuerwehr-hungen/templates/modular/attendance-tracker.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/attendance-tracker.html.twig
@@ -230,9 +230,9 @@
 
                 </div>
 
-                <div id="teacher-dropdown-container">
-                        <label for="teacher-dropdown">Ausbilder:</label>
-                        <select id="teacher-dropdown" class="teacher-dropdown" multiple>
+                <div id="instructor-dropdown-container">
+                        <label for="instructor-dropdown">Ausbilder:</label>
+                        <select id="instructor-dropdown" class="instructor-dropdown" multiple>
                             <option value="Haaf, Bastian">Bastian Haaf</option>
                             <option value="Tag, Dominik">Dominik Tag</option>
                             <option value="Reitz, Gerald">Gerald Reitz</option>
