--- a/themes/feuerwehr-hungen/templates/modular/attendance-tracker.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/attendance-tracker.html.twig
@@ -277,7 +277,45 @@
             <div class="chart-container" style="position: relative; height:50vh;">
                 <canvas id="attendance-chart"></canvas>
             </div>
+
+        <div class="columns">
+            <div class="column col-md-12 col-xl-9 col-6">
+                <div id="summary-card" class="card card-1">
+                    <div class="card-header summary-card-header">
+                        <h3 id="summary-participants">Mitglieder: 21</h3>
+                    </div>
+
+                    <div class="columns">
+                        <div class="column col-md-4 col-6">
+                            <p>Angebotene Unterrichtseinheiten [UE]:</p>
+                        </div>
+                        <div class="column summary-card-column col-md-4 col-6">
+                            <h3 id="summary-ue">2.7</h3>
+                        </div>
+                    </div>
+                    <div class="columns">
+                        <div  class="column  col-md-4 col-6">
+                            <p>Durchschnittliche <br> Beteiligung [UE]:</p>
+                        </div>
+                        <div class="column summary-card-column col-md-4 col-6">
+                            <h3 id="summary-mean">2.7</h3>
+                        </div>
+                    </div>
+                    <div class="columns">
+                        <div class="column col-md-4 col-col-6">
+                            <p>Zusatzausbildung (z.b. Planübung) [UE]:</p>
+                        </div>
+                        <div class="column summary-card-column col-md-4 col-6">
+                            <h3>2.7</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+
+        </div>
+
 
 
         </div>
