Update css for orders view and attendance

--- a/themes/feuerwehr-hungen/scss/fw/fw-colors.scss
+++ b/themes/feuerwehr-hungen/scss/fw/fw-colors.scss
@@ -7,3 +7,4 @@ $fw-text-underline: #6D6E6F;
 $fw-orange: #e24c31;
 $fw-light-yellow: #ffff00;
 $fw-light-background: #2761c3;
+$fw-yellows: #f1cd19;
