--- a/themes/feuerwehr-hungen/scss/attendance-tracker.scss
+++ b/themes/feuerwehr-hungen/scss/attendance-tracker.scss
@@ -1,4 +1,5 @@
 @import "analogue-clock.scss";
+@import "./timepicker/app.scss";
 
 .module-content {
   position: relative;
@@ -53,7 +54,7 @@
   font-weight: bold;
   padding-left: 0;
   margin-top: 0;
-  margin-bottom: 0.6rem;
+  margin-bottom: 1rem;
 
   label {
     font-size: 1.2rem;
@@ -95,6 +96,31 @@
     justify-content: start;
     gap: 16px;
     font-weight: bold;
+
+    #ue-label {
+      font-size: 1.5rem;
+      margin-bottom: -8px;
+      margin-top: -0.6em;
+      padding-left: 0.4em;
+      padding-top: .8rem;
+    }
+
+    #ue-input {
+      font-size: 1rem;
+      width: 2.8em;
+      margin-top: -5px;
+      padding: 0.5em 0;
+      border: .2em solid #2761c3;
+      border-radius: 0.9em;
+      text-align: center;
+      appearance: textfield;
+      font-weight: bold;
+
+      &::-webkit-inner-spin-button {
+        opacity: 1;
+        background: #063480;
+      }
+    }
   }
 
   .time-label {
@@ -108,32 +134,9 @@
     text-align: center;
   }
 
-  #endTime-input {
-    margin-left: 8px;
-  }
-
-  #ue-label {
-    font-size: 1.2rem;
-    margin-bottom: -8px;
-    margin-top: -0.6em;
-    padding-left: 0.4em;
-
-  }
-
-  #ue-input {
-    font-size: 1rem;
-    width: 2.5em;
-    margin-top: -5px;
-    padding: 0.5em 0;
-    border: .2em solid #2761c3;
-    border-radius: 0.9em;
-    text-align: center;
-    appearance: textfield;
-
-    &::-webkit-inner-spin-button {
-      opacity: 1;
-      background: #063480;
-    }
+  .button-container {
+    margin-top: 1rem;
+    justify-content: center;
   }
 
 }
@@ -412,7 +415,7 @@ input[type=number]::-webkit-outer-spin-button {
   .module-content {
     padding-left: 1rem;
     padding-right: 1rem;
-    padding-top: 3rem;
+    padding-top: 6rem;
   }
 
   .chart-container {
