--- a/themes/feuerwehr-hungen/templates/modular/glight.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/glight.html.twig
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="{{ url('theme://css-compiled/fw-glight.min.css') }}" />
 </head>
 
-<script type="text/javascript" src="{{ url('theme://js/glightbox.min.js') }}"></script>
+<script type="text/javascript" src="{{ url('theme://js/components/glightbox.min.js') }}"></script>
 
 <script type="module">
 
