--- a/themes/feuerwehr-hungen/scss/attendance-tracker.scss
+++ b/themes/feuerwehr-hungen/scss/attendance-tracker.scss
@@ -74,6 +74,12 @@
   margin-bottom: 16px;
 }
 
+@media  (max-width: 768px) {
+    .attendance-body {
+        flex-direction: column;
+    }
+}
+
 .checkbox-column {
   display: flex;
   flex-direction: column;
@@ -142,6 +148,7 @@
 }
 
 
+// ---- Checkbox Styling ----
 .checkbox {
   $block: &;
 
@@ -182,6 +189,10 @@
 
   &__label {
     margin-left: 0.5em;
+  }
+
+  .fa-solid {
+    margin-right: 0.6rem;
   }
 }
 
@@ -313,25 +324,37 @@ input[type=number]::-webkit-outer-spin-button {
 .number-input {
   border: 2px solid #ddd;
   display: inline-flex;
+
+  button {
+    outline: none;
+    -webkit-appearance: none;
+    background-color: transparent;
+    border: none;
+    align-items: center;
+    justify-content: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    cursor: pointer;
+    margin: 0;
+    position: relative;
+  }
+
+  input[type=number] {
+    font-family: sans-serif;
+    max-width: 3rem;
+    padding: .5rem;
+    border: solid #ddd;
+    border-width: 0 2px;
+    font-size: 1rem;
+    height: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+  }
 }
 
 .number-input,
 .number-input * {
   box-sizing: border-box;
-}
-
-.number-input button {
-  outline: none;
-  -webkit-appearance: none;
-  background-color: transparent;
-  border: none;
-  align-items: center;
-  justify-content: center;
-  width: 1.5rem;
-  height: 1.5rem;
-  cursor: pointer;
-  margin: 0;
-  position: relative;
 }
 
 .number-input button:before,
@@ -349,19 +372,6 @@ input[type=number]::-webkit-outer-spin-button {
   transform: translate(-50%, -50%) rotate(90deg);
 }
 
-.number-input input[type=number] {
-  font-family: sans-serif;
-  max-width: 3rem;
-  padding: .5rem;
-  border: solid #ddd;
-  border-width: 0 2px;
-  font-size: 1rem;
-  height: 1.5rem;
-  font-weight: bold;
-  text-align: center;
-}
-
-
 /* Chart styling */
 
 .chart-container {
@@ -373,7 +383,6 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 /* Card styling */
-
 .card{
   margin-top: 10px;
   margin-bottom: 1rem;
