Add checkbox twig and adjust ue styling

--- a/themes/feuerwehr-hungen/templates/modular/attendance-tracker.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/attendance-tracker.html.twig
@@ -60,7 +60,7 @@
 
                         </div>
                         <div class="column col-md-6 col-8">
-                            <div class="input-container">
+                            <div class="input-container ue-input-container">
                                 <label id="ue-label" for="ue-input">UE</label>
                                 <input id="ue-input" type="number">
                             </div>
