--- a/themes/feuerwehr-hungen/scss/attendance-tracker.scss
+++ b/themes/feuerwehr-hungen/scss/attendance-tracker.scss
@@ -103,6 +103,11 @@
     gap: 16px;
     font-weight: bold;
 
+
+    &.ue-input-container {
+      justify-content: center;
+    }
+
     #ue-label {
       font-size: 1.5rem;
       margin-bottom: -8px;
