--- a/themes/feuerwehr-hungen/scss/attendance-tracker.scss
+++ b/themes/feuerwehr-hungen/scss/attendance-tracker.scss
@@ -384,6 +384,7 @@ input[type=number]::-webkit-outer-spin-button {
   //overflow-x: scroll;
   overflow-x: hidden;
   background: white;
+  margin: 5rem 0 5rem 0;
 }
 
 
