--- a/themes/feuerwehr-hungen/scss/attendance-tracker.scss
+++ b/themes/feuerwehr-hungen/scss/attendance-tracker.scss
@@ -1,5 +1,8 @@
+@use "fw/linked-button.scss";
+
 @import "analogue-clock.scss";
 @import "./timepicker/app.scss";
+
 
 .module-content {
   position: relative;
@@ -7,6 +10,234 @@
   padding-right: 3rem;
   padding-top: 6rem;
 }
+
+/* Add event styling */
+.modal-container {
+  align-items: center;
+  /*       background: #F1EEF1;
+  border: 1px solid #D2D1D4;
+  */      display: flex;
+  justify-content: center;
+  box-shadow: none;
+
+  .email {
+    background: #DEDBDF;
+    border-radius: 16px;
+    height: 32px;
+    overflow: hidden;
+    position: relative;
+    width: 162px;
+    -webkit-tap-highlight-color: transparent;
+    transition: width 300ms cubic-bezier(0.4, 0.0, 0.2, 1),
+    height 300ms cubic-bezier(0.4, 0.0, 0.2, 1),
+    box-shadow 300ms cubic-bezier(0.4, 0.0, 0.2, 1),
+    border-radius 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
+  }
+  .email:not(.expand) {
+    cursor: pointer;
+  }
+  .email:not(.expand):hover {
+    background: #C2C0C2;
+  }
+  .from {
+    position: absolute;
+    transition: opacity 200ms 100ms cubic-bezier(0.0, 0.0, 0.2, 1);
+  }
+  .from-contents {
+    display: flex;
+    flex-direction: row;
+    transform-origin: 0 0;
+    transition: transform 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
+  }
+  .to {
+    opacity: 0;
+    position: absolute;
+    transition: opacity 100ms cubic-bezier(0.4, 0.0, 1, 1);
+  }
+  .to-contents {
+    transform: scale(.55);
+    transform-origin: 0 0;
+    transition: transform 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
+  }
+  .avatar {
+    border-radius: 12px;
+    height: 24px;
+    left: 6px;
+    position: relative;
+    top: 4px;
+    width: 24px;
+  }
+  .name {
+    font-size: 14px;
+    line-height: 32px;
+    margin-left: 10px;
+  }
+  .top {
+    background: #6422EB;
+    display: flex;
+    flex-direction: row;
+    height: 70px;
+    transition: height 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
+    width: 300px;
+  }
+  .avatar-large {
+    border-radius: 21px;
+    height: 42px;
+    margin-left: 12px;
+    position: relative;
+    top: 14px;
+    width: 42px;
+  }
+  .name-large {
+    color: #efd8ef;
+    font-size: 16px;
+    line-height: 70px;
+    margin-left: 20px;
+  }
+  .x-touch {
+    align-items: center;
+    align-self: center;
+    cursor: pointer;
+    display: flex;
+    height: 50px;
+    justify-content: center;
+    margin-left: auto;
+    width: 50px;
+  }
+  .x {
+    background: #BA87F9;
+    border-radius: 10px;
+    height: 20px;
+    position: relative;
+    width: 20px;
+  }
+  .x-touch:hover .x {
+    background: #CB9AFB;
+  }
+  .line1 {
+    background: #6422EB;
+    height: 12px;
+    position: absolute;
+    transform: translateX(9px) translateY(4px) rotate(45deg);
+    width: 2px;
+  }
+  .line2 {
+    background: #6422EB;
+    height: 12px;
+    position: absolute;
+    transform: translateX(9px) translateY(4px) rotate(-45deg);
+    width: 2px;
+  }
+  .bottom {
+    background: #FFF;
+    color:  #444247;
+    font-size: 14px;
+    height: 200px;
+    padding-top: 5px;
+    width: 300px;
+  }
+  .row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+  }
+  .email.expand {
+    border-radius: 6px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.10), 0 6px 6px rgba(0,0,0,0.16);
+    height: 200px;
+    width: 300px;
+  }
+  .expand .from {
+    opacity: 0;
+    transition: opacity 100ms cubic-bezier(0.4, 0.0, 1, 1);
+  }
+  .expand .from-contents {
+    transform: scale(1.91);
+  }
+  .expand .to {
+    opacity: 1;
+    transition: opacity 200ms 100ms cubic-bezier(0.0, 0.0, 0.2, 1);
+  }
+  .expand .to-contents {
+    transform: scale(1);
+  }
+
+
+  $accent-color: #2962ff;
+
+  /* Modal input */
+  .inputbox{
+
+    position: relative;
+    padding:15px 0 28px 16px;
+
+    &-content{
+      position: relative;
+      width: 100%;
+      margin-top: 1.1rem;
+
+      input{
+        width: 100%;
+        height: 30px;
+        box-sizing: border-box;
+        line-height: 30px;
+        font-size: 1.3rem;
+        border:0;
+        background: none;
+        border-bottom:1px solid #ccc;
+        outline:none;
+        border-radius: 0;
+        -webkit-appearance: none;
+
+        &:focus,&:valid{
+          &~label{
+            color: $accent-color;
+            transform: translateY(-20px);
+            font-size:0.825em;
+            cursor:default;
+          }
+        }
+
+        &:focus{
+          &~.underline{
+            width: 100%;
+          }
+        }
+      }
+
+      label {
+        position: absolute;
+        top:0;
+        left:0;
+        height: 30px;
+        line-height: 30px;
+        color:#ccc;
+        cursor:text;
+        transition: all 200ms ease-out;
+        z-index:10;
+      }
+
+      .underline{
+        content:'';
+        display: block;
+        position: absolute;
+        bottom:-1px;
+        left:0;
+        width: 0;
+        height: 2px;
+        background: $accent-color;
+        transition: all 200ms ease-out;
+      }
+    }
+  }
+
+
+}
+
+
+
+
 
 /* Checkbox Group */
 
