Complete rework of loading logic for events

--- a/themes/feuerwehr-hungen/templates/modular/submodules/create-modal.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/submodules/create-modal.html.twig
@@ -5,13 +5,13 @@
     <div class="email" onclick="this.classList.add('expand')">
         <div class="from">
             <div class="from-contents">
-                <i class="fa-solid fa-plus avatar"></i>
+                <i class="fa-solid fa-plus signPlus"></i>
+                <div class="name">Neues Event</div>
             </div>
         </div>
         <div class="to">
             <div class="to-contents">
                 <div class="top">
-                    <i class="fa-solid fa-plus avatar"></i>
                     <div class="name-large">Neues Event Erstellen</div>
                     <div class="x-touch" onclick="document.querySelector('.email').classList.remove('expand');event.stopPropagation();">
                         <div class="x">
