--- a/themes/feuerwehr-hungen/scss/attendance-tracker.scss
+++ b/themes/feuerwehr-hungen/scss/attendance-tracker.scss
@@ -1,4 +1,5 @@
 @use "fw/linked-button.scss";
+@use "fw/fw-colors.scss";
 
 @import "analogue-clock.scss";
 @import "./timepicker/app.scss";
@@ -32,22 +33,24 @@
     height 300ms cubic-bezier(0.4, 0.0, 0.2, 1),
     box-shadow 300ms cubic-bezier(0.4, 0.0, 0.2, 1),
     border-radius 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
+
+    .from {
+      position: absolute;
+      transition: opacity 200ms 100ms cubic-bezier(0.0, 0.0, 0.2, 1);
+
+      .from-contents {
+        display: flex;
+        flex-direction: row;
+        transform-origin: 0 0;
+        transition: transform 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
+      }
+    }
   }
   .email:not(.expand) {
     cursor: pointer;
   }
   .email:not(.expand):hover {
     background: #C2C0C2;
-  }
-  .from {
-    position: absolute;
-    transition: opacity 200ms 100ms cubic-bezier(0.0, 0.0, 0.2, 1);
-  }
-  .from-contents {
-    display: flex;
-    flex-direction: row;
-    transform-origin: 0 0;
-    transition: transform 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
   }
   .to {
     opacity: 0;
@@ -59,26 +62,26 @@
     transform-origin: 0 0;
     transition: transform 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
   }
-  .avatar {
-    border-radius: 12px;
-    height: 24px;
-    left: 6px;
-    position: relative;
-    top: 4px;
-    width: 24px;
-  }
   .name {
     font-size: 14px;
     line-height: 32px;
     margin-left: 10px;
   }
   .top {
-    background: #6422EB;
+    background: fw-colors.$fw-blue;
     display: flex;
     flex-direction: row;
     height: 70px;
     transition: height 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
     width: 300px;
+  }
+  .signPlus {
+    font-size: 1rem;
+    height: 30px;
+    left: 10px;
+    position: relative;
+    top: 9px;
+    width: 30px;
   }
   .avatar-large {
     border-radius: 21px;
@@ -105,7 +108,7 @@
     width: 50px;
   }
   .x {
-    background: #BA87F9;
+    background: #a4adf1;
     border-radius: 10px;
     height: 20px;
     position: relative;
@@ -115,14 +118,14 @@
     background: #CB9AFB;
   }
   .line1 {
-    background: #6422EB;
+    background: fw-colors.$fw-blue;
     height: 12px;
     position: absolute;
     transform: translateX(9px) translateY(4px) rotate(45deg);
     width: 2px;
   }
   .line2 {
-    background: #6422EB;
+    background: fw-colors.$fw-blue;
     height: 12px;
     position: absolute;
     transform: translateX(9px) translateY(4px) rotate(-45deg);
