--- a/themes/feuerwehr-hungen/scss/shop.scss
+++ b/themes/feuerwehr-hungen/scss/shop.scss
@@ -515,9 +515,9 @@ $color-accent: $color-signal;
     margin-bottom: 1rem;
 
     h2 {
-      margin-top: 0;
+      margin-top: 10px;
       margin-bottom: 0;
-      flex-grow: 1;
+      position: absolute;
     }
 
     .close-button {
